# suitest

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.mcp-prototype  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SESSION_LOOP.md  Suitest.html  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release-please-config.json  wrangler.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
action/: README.md  action.yml
apps/api/: pyproject.toml
apps/api/scripts/: seed_example.py  seed_zero_e2e.py
apps/api/src/suitest_api/: __init__.py  __main__.py  capabilities.py  main.py  observability.py  settings.py
apps/api/src/suitest_api/auth/: db.py  manager.py  router.py  schemas.py
apps/api/src/suitest_api/integrations/: __init__.py  base.py  contract.py  github_adapter.py  jira_adapter.py  linear_adapter.py  notifier_registry.py  registry.py  slack_adapter.py
apps/api/src/suitest_api/middleware/: __init__.py  audit.py  observability.py  ratelimit.py
apps/api/src/suitest_api/routers/: _pagination.py  _tier.py  admin_users.py  agent_chat.py  agent_plugins.py  analytics.py  api_keys.py  audit_logs.py  auth_me.py  autonomy.py  capabilities.py  cost.py  defects.py  documents.py  eval_runs.py  files.py  generators.py  inbox.py  ingest.py  integrations.py  invitations.py  llm_config.py  llm_proxy.py  mcp_providers.py  plugins.py  projects.py  prompts.py  requirements.py  runs.py  suites.py  test_cases.py  webhooks.py  workspaces.py  ws.py
apps/api/src/suitest_api/schemas/: __init__.py  analytics.py  api_keys.py  audit_log.py  defect.py  document.py  eval.py  files.py  ingest.py  integration.py  project.py  prompts.py  requirement.py  run.py  runs.py  suite.py  test_case.py  webhooks.py  workspace.py
apps/api/src/suitest_api/services/: __init__.py  agent_chat_service.py  agent_definition_service.py  analytics_service.py  api_key_service.py  artifact_signing.py  audit_log_service.py  autonomy_service.py  bootstrap.py  budget_guard.py  capability_service.py  code_export_service.py  cost_service.py  custom_integration_service.py  defect_auto_filer.py  defect_service.py  diff_selection_service.py  document_service.py  eval_service.py  file_storage.py  generator_service.py  ingest_service.py  integration_service.py  invitation_service.py  junit_report_service.py  llm_config_service.py  password_service.py  project_service.py  prompt_experiment_service.py  prompt_resolver.py  replay_service.py  reporter_registry.py  reporter_service.py  requirement_service.py  requirement_write_service.py  run_service.py  semantic_search_service.py  spend_alert_service.py  suite_service.py  test_case_service.py  (+5 more)
apps/api/src/suitest_api/utils/: __init__.py  slug.py
apps/api/src/suitest_api/ws/: __init__.py  manager.py  messages.py  publisher.py
apps/api/tests/: api_harness.py  conftest.py  integrations_contract.py  test_adapter_registry.py  test_agent_chat.py  test_agent_plugins.py  test_analytics.py  test_api_keys.py  test_artifact_local_url.py  test_artifact_signed_url.py  test_audit_logs.py  test_audit_logs_endpoint.py  test_audit_middleware.py  test_auth.py  test_auth_bearer.py  test_autonomy.py  test_capabilities.py  test_cors.py  test_cost.py  test_cost_budget_guard.py  test_defect_auto_filer.py  test_defects.py  test_defects_writes.py  test_documents.py  test_eval_endpoints.py  test_eval_fixtures_resolver.py  test_eval_service.py  test_files.py  test_generators_classify.py  test_generators_crawler.py  test_generators_diff_select.py  test_generators_mcp_discovery.py  test_generators_openapi.py  test_generators_prd.py  test_generators_url_semantic.py  test_github_adapter.py  test_health.py  test_inbox.py  test_integrations.py  test_integrations_crud.py  (+50 more)
apps/api/tests/db/: test_m1d_migrations.py
apps/api/tests/e2e/: __init__.py  conftest.py  test_auto_defect_e2e.py
apps/api/tests/fixtures/openapi/: custom-rate-limited.yaml  httpbin.json  petstore.json
apps/api/tests/services/: test_analytics_service.py  test_budget_guard_service.py  test_capability_service.py  test_code_export_service.py  test_defect_service.py  test_document_service.py  test_ingest_service.py  test_integration_service.py  test_junit_report_service.py  test_project_service.py  test_requirement_service.py  test_run_service.py  test_suite_service.py  test_test_case_service.py  test_workspace_service.py
apps/runner/: pyproject.toml
apps/runner/src/suitest_runner/: __init__.py  __main__.py  artifacts.py  deps.py  local_ctx.py  local_supervisor.py  null_publisher.py  observability.py  settings.py  storage.py  worker.py
apps/runner/src/suitest_runner/executors/: __init__.py  step_executor.py
apps/runner/src/suitest_runner/handlers/: __init__.py  step_handler.py
apps/runner/src/suitest_runner/jobs/: __init__.py  dispatch_webhook.py  export_workspace.py  file_external_issue.py  rotate_audit_logs.py  run_test_case.py  send_slack_notification.py  workspace_cleanup.py
apps/runner/tests/: conftest.py  test_artifacts.py  test_dispatch_webhook_job.py  test_export_workspace_job.py  test_invoker_cap_integration.py  test_local_ctx.py  test_local_supervisor.py  test_null_publisher.py  test_rotate_audit_logs_job.py  test_run_orchestrator.py  test_send_slack_notification_job.py  test_settings.py  test_step_executor.py  test_step_handler_hook.py  test_storage.py  test_worker.py
cli/: README.md  pyproject.toml
cli/src/suitest_cli/: __init__.py  main.py
docs/: AI_AGENT.md  API.md  ARCHITECTURE.md  AUTONOMY.md  BLACKBOX_UI_TESTING.md  CAPABILITY_TIERS.md  DATA_MODEL.md  DEPLOYMENT.md  GENERATORS.md  MCP_PLUGINS.md  PRODUCT.md  ROADMAP.md  SUITEST-ARCHITECTURE.md  SUITEST-FINAL-REPORT.md  SUITEST-GAP-ANALYSIS.md  SUITEST-USAGE.md  SUTEST-ARCHITECTURE.md  SUTEST-FINAL-REPORT.md  SUTEST-GAP-ANALYSIS.md  SUTEST-USAGE.md  UI_SPEC.md  (+2 more)
docs-site/: README.md  astro.config.mjs  package.json
sdk/python/: README.md  pyproject.toml
sdk/python/src/suitest_sdk/: __init__.py  client.py
(+459 files in other folders)
