[project]
name = "suitest-monorepo"
version = "0.1.0"
description = "Suitest OSS monorepo root"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/runner",
  "packages/agent",
  "packages/core",
  "packages/db",
  "packages/mcp",
  "packages/shared",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "asgi-lifespan>=2.1.0",
  "pre-commit>=4.0.0",
]

[tool.uv.sources]
suitest-api = { workspace = true }
suitest-runner = { workspace = true }
suitest-agent = { workspace = true }
suitest-core = { workspace = true }
suitest-db = { workspace = true }
suitest-mcp = { workspace = true }
suitest-shared = { workspace = true }
