[project]
name = "suitest-monorepo"
version = "0.1.0"
description = "Suitest OSS monorepo root"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/runner",
  "packages/agent",
  "packages/core",
  "packages/db",
  "packages/mcp",
  "packages/shared",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "asgi-lifespan>=2.1.0",
  "pre-commit>=4.0.0",
]

[tool.uv.sources]
suitest-api = { workspace = true }
suitest-runner = { workspace = true }
suitest-agent = { workspace = true }
suitest-core = { workspace = true }
suitest-db = { workspace = true }
suitest-mcp = { workspace = true }
suitest-shared = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps", "packages"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # bugbear
  "UP",     # pyupgrade
  "ASYNC",  # async correctness
  "RUF",    # ruff-specific
  "SIM",    # simplify
  "TCH",    # type-checking-imports
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["B018"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
mypy_path = ["apps/api/src", "apps/runner/src", "packages/agent/src", "packages/core/src", "packages/db/src", "packages/mcp/src", "packages/shared/src"]
explicit_package_bases = true
namespace_packages = true
exclude = "(^|/)(\\.venv|alembic/versions|node_modules|dist|build)/"

[[tool.mypy.overrides]]
module = ["alembic.*", "fastembed.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["apps/api/tests", "apps/runner/tests", "packages/core/tests", "packages/db/tests", "packages/mcp/tests", "packages/shared/tests", "packages/agent/tests"]
addopts = "-ra -q --strict-markers"
