[project]
name = "suitest-monorepo"
version = "0.1.0"
description = "Suitest OSS monorepo root"
requires-python = ">=3.12,<3.13"

[tool.uv.workspace]
members = [
  "apps/api",
  "apps/runner",
  "packages/agent",
  "packages/core",
  "packages/db",
  "packages/mcp",
  "packages/shared",
]

[tool.uv]
dev-dependencies = [
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "httpx>=0.27.0",
  "asgi-lifespan>=2.1.0",
  "pre-commit>=4.0.0",
  "aiosqlite>=0.20.0",
  "fakeredis>=2.26.0",
]

[tool.uv.sources]
suitest-api = { workspace = true }
suitest-runner = { workspace = true }
suitest-agent = { workspace = true }
suitest-core = { workspace = true }
suitest-db = { workspace = true }
suitest-mcp = { workspace = true }
suitest-shared = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["apps", "packages"]
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "I",      # isort
  "B",      # bugbear
  "UP",     # pyupgrade
  "ASYNC",  # async correctness
  "RUF",    # ruff-specific
  "SIM",    # simplify
  "TCH",    # type-checking-imports
]
# RUF101: newer ruff redirects TCH00x → TC00x, but the pinned pre-commit ruff
# (0.7.4) only recognises the legacy TCH00x codes. Ignore the redirect nag so the
# same noqa codes satisfy both the pre-commit hook and a newer local ruff.
ignore = ["E501", "RUF101"]  # E501: line length handled by formatter

[tool.ruff.lint.flake8-type-checking]
# SQLAlchemy 2 (Mapped[...]) and Pydantic v2 evaluate annotations at runtime even
# with `from __future__ import annotations`, so imports used only in annotations on
# these base classes must stay at module scope (not moved into a TYPE_CHECKING block).
runtime-evaluated-base-classes = [
  "suitest_db.base.Base",
  "sqlalchemy.orm.DeclarativeBase",
  "pydantic.BaseModel",
  "suitest_shared.domain.base.DomainModel",
]

[tool.ruff.lint.per-file-ignores]
# Tests annotate fixtures/params with runtime types (AsyncSession, Iterator); moving
# those into TYPE_CHECKING blocks adds noise without benefit in test modules.
"**/tests/**/*.py" = ["B018", "TCH001", "TCH002", "TCH003"]
# FastAPI dependency providers must keep their annotation imports (User, AsyncSession)
# at module scope so DI can resolve type hints at request time, and ``Depends(...)`` /
# ``Header(...)`` in argument defaults is the canonical FastAPI idiom (B008). Service
# constructors annotate injected repos with runtime types that we deliberately import
# eagerly so the wiring is greppable; TYPE_CHECKING-only churn buys nothing here.
"apps/api/src/suitest_api/deps/*.py" = ["B008", "TCH001", "TCH002", "TCH003"]
"apps/api/src/suitest_api/routers/*.py" = ["B008", "TCH001", "TCH002", "TCH003"]
"apps/api/src/suitest_api/services/*.py" = ["TCH001", "TCH002", "TCH003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
mypy_path = ["apps/api/src", "apps/runner/src", "packages/agent/src", "packages/core/src", "packages/db/src", "packages/mcp/src", "packages/shared/src", "packages/db/tests", "packages/mcp/tests", "apps/api/tests"]
explicit_package_bases = true
namespace_packages = true
exclude = "(^|/)(\\.venv|alembic/versions|node_modules|dist|build)/"

[[tool.mypy.overrides]]
module = ["alembic.*", "fastembed.*", "cuid2.*", "pgvector.*", "testcontainers.*"]
ignore_missing_imports = true

# FastAPI-Users base annotates user_id as raw UUID_ID in its TYPE_CHECKING branch;
# our SQLAlchemy 2 override uses Mapped[uuid.UUID] which triggers an assignment
# warning under certain mypy configurations (e.g. pre-commit's --ignore-missing-imports).
[[tool.mypy.overrides]]
module = ["suitest_db.models.user"]
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["apps/api/tests", "apps/runner/tests", "packages/core/tests", "packages/db/tests", "packages/mcp/tests", "packages/shared/tests", "packages/agent/tests"]
addopts = "-ra -q --strict-markers --import-mode=importlib"  # NEW: --import-mode=importlib resolves test file name collisions across packages
