[project]
name = "suitest-api"
version = "0.1.0"
description = "Suitest FastAPI HTTP service"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.51.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "structlog>=26.1.0",
  "fastapi-users[sqlalchemy,oauth]>=15.0.5",
  "httpx-oauth>=0.16.0",
  "opentelemetry-distro>=0.64b0",
  "opentelemetry-sdk>=1.29.0",
  "opentelemetry-exporter-otlp-proto-http>=1.29.0",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.50b0",
  "opentelemetry-instrumentation-httpx>=0.50b0",
  "opentelemetry-instrumentation-asyncpg>=0.50b0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "suitest-agent",
  "suitest-core",
  "suitest-db",
  "suitest-mcp",
  "suitest-shared",
  "slowapi>=0.1.9",
  "arq>=0.26",
  "aioboto3>=12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/suitest_api"]
