[project]
name = "suitest-runner"
version = "0.1.0"
description = "Suitest ARQ worker (placeholder for M0; full runner in M1)"
requires-python = ">=3.12,<3.13"
dependencies = [
  "arq>=0.26.3",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "structlog>=24.4.0",
  "suitest-core",
  "suitest-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/suitest_runner"]
