[project]
name = "suitest-runner"
version = "0.4.0"
description = "Suitest ARQ worker — executes test runs via the MCP layer"
requires-python = ">=3.12,<3.13"
dependencies = [
  "arq>=0.26",
  "redis[hiredis]>=5.0",
  "sqlalchemy[asyncio]>=2.0",
  "aioboto3>=12.4",
  "opentelemetry-api>=1.25",
  "opentelemetry-sdk>=1.44.0",
  "opentelemetry-exporter-otlp-proto-http>=1.25",
  "structlog>=26.1.0",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "suitest-mcp",
  "suitest-db",
  "suitest-shared",
  "suitest-core",
  "suitest-api",
  "suitest-agent",
]

[project.optional-dependencies]
test = [
  "fakeredis>=2.36.2",
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
  "aiosqlite>=0.20",
  "moto[s3]>=5.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/suitest_runner"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
