[project]
name = "suitest-sdk"
version = "0.1.0"
description = "Official Python SDK for the Suitest API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Suitest contributors" }]
keywords = ["suitest", "testing", "tcm", "mcp", "sdk"]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://suitest.dev"
Source = "https://github.com/suitest-dev/suitest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/suitest_sdk"]
