[project]
name = "suiflex-suitest-sdk"
version = "0.1.1"
description = "Official Python SDK for the Suitest API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Suitest contributors" }]
keywords = ["suitest", "testing", "tcm", "mcp", "sdk"]
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://suitest.dev"
Source = "https://github.com/suiflex/suitest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/suitest_sdk"]
